--- a/Demo20181015.ipynb
+++ b/Demo20181015.ipynb
@@ -2690,6 +2690,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Dictionary"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 154,
    "metadata": {},
@@ -3042,6 +3049,13 @@
     "        break\n",
     "else:\n",
     "    print('我現在還不聰明，以後變聰明以後再回答你')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Set"
    ]
   },
   {
